Updated READMEs, HTML fix for tables, CSS fix for jumping to IDs

--- a/5.2/z52.css
+++ b/5.2/z52.css
@@ -110,7 +110,7 @@ pre span:before{
 h1::before, h2::before, h3::before, h4::before {
   display: block;
   content: " ";
-  margin-top: -4rem;
-  height: 4rem;
+  margin-top: -3.5rem;
+  height: 3.5rem;
   visibility: hidden;
 }
